--- a/Bejeweled/AndroidManifest.xml
+++ b/Bejeweled/AndroidManifest.xml
@@ -14,17 +14,13 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name="com.inf8402.tps.tp1.bejeweled.activity.MainActivity"
+            android:name="com.inf8402.tps.tp1.bejeweled.MainActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
-        <activity
-            android:name="com.inf8402.tps.tp1.bejeweled.activity.GameMenuActivity"
-            android:label="@string/title_activity_game_menu" >
         </activity>
     </application>
 
