--- a/Bejeweled/AndroidManifest.xml
+++ b/Bejeweled/AndroidManifest.xml
@@ -14,7 +14,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name="com.inf8402.tps.tp1.bejeweled.activity.MainActivity"
+            android:name="com.inf8402.tps.tp1.bejeweled.activity.GameMenuActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -23,8 +23,12 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="com.inf8402.tps.tp1.bejeweled.activity.GameMenuActivity"
-            android:label="@string/title_activity_game_menu" >
+            android:name="com.inf8402.tps.tp1.bejeweled.activity.GameScoreActivity"
+            android:label="@string/title_activity_game_score" >
+        </activity>
+        <activity
+            android:name="com.inf8402.tps.tp1.bejeweled.activity.ListScoreSpeed"
+            android:label="@string/title_activity_list_score_speed" >
         </activity>
     </application>
 
