--- a/Bejeweled/AndroidManifest.xml
+++ b/Bejeweled/AndroidManifest.xml
@@ -12,7 +12,8 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme"
+        android:largeHeap="true" >
         <activity
             android:name="com.inf8402.tps.tp1.bejeweled.activity.GameMenuActivity"
             android:label="@string/app_name" >
@@ -30,10 +31,10 @@
             android:name="com.inf8402.tps.tp1.bejeweled.activity.GameScoreActivity"
             android:label="@string/title_activity_game_score" >
         </activity>
-        <activity
-            android:name="com.inf8402.tps.tp1.bejeweled.activity.ListScoreSpeed"
-            android:label="@string/title_activity_list_score_speed" >
-        </activity>
+<!--         <activity -->
+<!--             android:name="com.inf8402.tps.tp1.bejeweled.activity.ListScoreSpeed" -->
+<!--             android:label="@string/title_activity_list_score_speed" > -->
+<!--         </activity> -->
     </application>
 
 </manifest>
