Ajout du service pour la gestion du song. Étape 1 => contient quelques logs.

--- a/Bejeweled/AndroidManifest.xml
+++ b/Bejeweled/AndroidManifest.xml
@@ -35,6 +35,12 @@
             android:name="com.inf8402.tps.tp1.bejeweled.activity.GameActivity"
             android:label="@string/title_activity_game" >
         </activity>
+
+        <service
+            android:name="com.inf8402.tps.tp1.bejeweled.service.MediaService"
+            android:enabled="true"
+            android:exported="false"
+            android:label="MediaService" />
     </application>
 
 </manifest>
