Gestion du media par le service MenuService

--- a/Bejeweled/AndroidManifest.xml
+++ b/Bejeweled/AndroidManifest.xml
@@ -35,12 +35,16 @@
             android:name="com.inf8402.tps.tp1.bejeweled.activity.GameActivity"
             android:label="@string/title_activity_game" >
         </activity>
+        <activity
+            android:name="com.inf8402.tps.tp1.bejeweled.activity.IActivity"
+            android:label="@string/title_activity_i" >
+        </activity>
 
         <service
             android:name="com.inf8402.tps.tp1.bejeweled.service.MediaService"
             android:enabled="true"
             android:exported="false"
-            android:label="MediaService" />
+            android:label="MySimpleService" />
     </application>
 
 </manifest>
